--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -18,6 +18,7 @@
 		width: 100%;
 		max-width: 400px;
 		margin: 0 auto;
+		object-fit: cover;
 	}
 }
 
